--- a/main.html
+++ b/main.html
@@ -11,6 +11,8 @@
     <div id="buttons"></div>
     <button class="stop">Stop</button>
 
+    <audio id="audio-player"></audio> <!-- Persistent audio element for Cypress -->
+
     <script src="script.js"></script>
 </body>
 </html>
