--- a/main.html
+++ b/main.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soundbar</title>
-    <link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Soundbar</h1>
-    <div id="buttons"></div>
-    <button class="stop">Stop</button>
+	<!-- the entire body must be written by student -->
+	<div class="buttons">
+	</div>
+	<audio id="audio-player" controls style="display: none;"></audio>
+    <script type="text/javascript" src="./script.js">
+</script>
 
-    <audio id="audio-player"></audio> <!-- Persistent audio element for Cypress -->
-
-    <script src="script.js"></script>
 </body>
+
 </html>
